apps/media/sonarr/sonarr-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sonarr-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/sonarr"
