apps/media/sonarr/sonarr-deployment-with_NFS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          #image: lscr.io/linuxserver/sonarr:latest
          image: lscr.io/linuxserver/sonarr:4.0.20 # {"$imagepolicy": "flux-system:sonarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media-data
              mountPath: /data
            - name: downloads
              mountPath: /downloads
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 90
            periodSeconds: 30
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-media-data
          persistentVolumeClaim:
            claimName: sonarr-media-data
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
