apps/media/sonarr/sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.catacumbas69.com`)
#    - match: PathPrefix(`/sonarr`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
#      middlewares:
#        - name: sonarr-headers
